Fixed spacing

--- a/main.css
+++ b/main.css
@@ -189,7 +189,7 @@ a {
     top: 20px;
 }
 #ebolanews {
-    width: 465px;
+    width: 30%;
     position: relative;
     left: 150px;
     top: 0px;
@@ -235,7 +235,7 @@ a {
     color: white;
     position: absolute;
     top: 505px;
-    left: 1230px;
+    left: 1150px;
     width: 30%;
     height: 400px;
 }
@@ -247,7 +247,7 @@ a {
     position: absolute;
     top: 895px;
     width: 35%;
-    left: 1180px;
+    left: 1100px;
 }
 #pic2 {
     background-color: skyblue;
@@ -256,10 +256,10 @@ a {
     border-radius: 5px;
     color: white;
     position: absolute;
-    left: 680px;
+    left: 640px;
     top: 400px;
     height: 600px;
-    width: 1200px;
+    width: 60%;
 }
 #pic3 {
     background-color: skyblue;
